tests/ui/struct_flatten.stderr
error: Variant1: `flatten` can only be applied on a field or on an enum variant with another enum inside
  --> $DIR/struct_flatten.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
